added folders for testing features

--- a/firstProject/practice/developers/templates/developers/intro.html
+++ b/firstProject/practice/developers/templates/developers/intro.html
@@ -27,7 +27,7 @@
 		<!-- Main Body -->	
 		<div id = mainBody>
 			{% block content %}
-				<a href='devies/upload'> Upload Files </a>
+				<a href='upload'> Upload Files </a>
 			{% endblock %}
 		</div>
 		
