--- a/firstProject/practice/developers/templates/developers/fileupload.html
+++ b/firstProject/practice/developers/templates/developers/fileupload.html
@@ -1,7 +1,7 @@
 {% extends 'developers/intro.html' %}
 
 {% block content %}
-  <form method="post" enctype="multipart/form-data">
+  <form method="post" enctype="multipart/form-data/">
     {% csrf_token %}
     <input type="file" name="myfile">
     <button type="submit">Upload</button>
